# VerifyBot

./: .gitignore  CMakeLists.txt  EPIC_STEPS.md  flake.nix  verification.cpp
src/: botcommandhandler.cpp  botconfig.cpp  commands.cpp  constants.h  format_polyfill.h  verification.cpp
